...
    tools:context="com.epicodus.myspace.MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:hint="@string/user_name"
...
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_marginBottom="82dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_above="@+id/profileAccessButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
...
